--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Build with Maven
         run: mvn -B package --file pom.xml
       - name: Copy artifact
-        run: mkdir staging && cp target/*.jar staging
+        run: mkdir staging && cp ruoyi-admin/target/*.jar staging
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
